sumo/tests/sumo/errors/duplicates/input_dua2s.netccfg
<?xml version="1.0" encoding="iso-8859-1"?>

<configuration xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:noNamespaceSchemaLocation="http://sumo.sf.net/xsd/netconvertConfiguration.xsd">

    <input>
        <node-files value="../../../duarouter/input_dua2s.nod.xml"/>
        <edge-files value="../../../duarouter/input_dua2s.edg.xml"/>
    </input>

    <output>
        <output-file value="net.net.xml"/>
    </output>

    <processing>
        <no-internal-links value="true"/>
    </processing>

</configuration>
